footer not showing fix

--- a/TrackingTool/assets/styles/style.css
+++ b/TrackingTool/assets/styles/style.css
@@ -125,13 +125,14 @@ h3.heading {
 .site {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* 1 */
+  min-height: 100vh;
 } 
 
 .dash{
-  flex: 1 0 auto; /* 2 */
-  padding: 0 1em;
+  position: relative;
+  flex: 1;
 }
+
 
 .formclass {
   background-color: rgba(226, 242, 255, 0.911);
